--- a/mss-web-server/src/main/webapp/WEB-INF/web.xml
+++ b/mss-web-server/src/main/webapp/WEB-INF/web.xml
@@ -108,7 +108,7 @@
 	<!-- 配置spring mvc mapping -->
 	<servlet-mapping>
 		<servlet-name>springMVC</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
 	<!-- 配置session超时时间，单位分钟 -->
